--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -187,43 +187,20 @@ aside {
   flex-direction: column;
 }
 
+.userAvatar {
+  width: 61px;
+  height: 61px;
+  border-radius: 50%;
+  display: inline-block;
+}
+
 .newCommentBlock {
   width: 100%;
-  height: 9.8rem;
+  min-height: 9.8rem;
   display: flex;
   justify-content: space-between;
   gap: 30px;
-
-
-  #userAvatar {
-    width: 61px;
-    height: 61px;
-    border-radius: 50%;
-    display: inline-block;
-  }
-
-  .userNameAndFormWrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: start;
-  }
-
-  .userNameWrapper {
-    width: 68.8rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-  }
-
-  #userName {
-    @include font-user;
-  }
-
-  .warning {
-    @include font-italic;
-    display: none;
-  }
+  margin-bottom: 4rem;
 
   form {
     display: flex;
@@ -259,15 +236,37 @@ aside {
   }
 }
 
+.userNameAndFormWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: start;
+}
+
+.userNameWrapper {
+  width: 68.8rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.userName {
+  @include font-user;
+}
+
+.warning {
+  @include font-italic;
+  display: none;
+}
+
 .btn {
   @include font-lg;
   width: 213px;
   height: 61px;
   border-radius: 5px;
   border: none;
-  background-color: #ABD873;
+  background-color: #abd873;
   cursor: pointer;
-  
 }
 
 .btn:disabled {
@@ -275,4 +274,24 @@ aside {
   opacity: 0.4;
   color: #000;
   cursor: default;
+}
+
+.publishedComment {
+  width: 1007px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 30px;
+
+  .publishedCommentText {
+    @include font-lg;
+    field-sizing: content;
+    overflow-y: hidden;
+    padding: 20px;
+    padding-left: 0;
+    text-align: justify;
+    outline: none;
+    border: none;
+    resize: none;
+  }
 }
