--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -25,6 +25,13 @@ $primary-color: #d9d9d9;
   color: #000;
 }
 
+@mixin font-sm {
+  font-family: $font-primary;
+  font-size: $font-size-sm;
+  font-weight: $font-weight-reg;
+  color: #000;
+}
+
 @mixin font-user {
   font-family: $font-primary;
   font-size: $font-size-lg;
@@ -246,8 +253,9 @@ aside {
 .userNameWrapper {
   width: 68.8rem;
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
   align-items: center;
+  gap: 15px;
 }
 
 .userName {
@@ -295,3 +303,27 @@ aside {
     resize: none;
   }
 }
+
+.date {
+  @include font-sm;
+  opacity: 0.4;
+  gap: 15px;
+}
+
+.actionButtons {
+}
+
+.reply {
+  @include font-lg;
+  width: 115px;
+  opacity: 0.4;
+  border: none;
+  text-align: right;
+  background-color: transparent;
+  background-image: url('@/assets/reply.svg');
+  background-repeat: no-repeat;
+  background-position: left;
+  cursor: pointer;
+
+}
+
